<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="button_download">Download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_download">See changes</string>
    <string name="toast_msg">Please select the file to download</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glideTitle">Glide - Image Loading Library by BumpTech</string>
    <string name="udacityTitle">LoadApp - Current repository by Udacity</string>
    <string name="retrofitTitle">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="ok">OK</string>
    <string name="file_name">File name</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="download_notification_channel_id">download_channel</string>
    <string name="check_status">Check the status</string>
</resources>
